package com.aplicatie.user.misc_objects;

public class Constants {
    public static String server_ip = "http://192.168.43.58";
    public static String git_source = "https://github.com/andreivasilescu1995";

    public static double ticket_cost = 1.5;
    public static double subscription_cost = 15;

    public static int default_update_interval = 10;
    public static boolean collect_device_data = true;
    public static boolean mask_card = true;
    public static boolean mask_code = true;
    public static boolean vault_payments = true;

    public static int camera_padding = 250;
}
